# nexus-video-service

./: .env.example  .gitignore  .ruff.toml  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini
processing/20260629-091802-clip.mp4/: metadata.json
processing/20260629-091809-clip.mp4/: metadata.json
processing/20260629-093521-clip.mp4/: metadata.json
scripts/: test-tiktok-dry-run.sh  tiktok-cursor-upload.sh  tiktok-media-analyze.py  tiktok-upload.py  tiktok-upload.scpt
scripts/lib/: chrome-tiktok-common.sh  chrome-tiktok-fill.sh  chrome-tiktok-open.sh  chrome-tiktok-publish.sh  chrome-tiktok-select-file.sh
src/: config.py  main.py  models.py  tasks.py  tiktok_upload.py  upload_targets.py
tests/: test_main.py  test_tiktok_upload.py
